Modified code and new CSVs classes