@@ -1,12 +1,21 @@
 package P.KNNandCSV;
 
-import java.util.LinkedList;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class Row {
-    private List<Double> data;
+
+    private final List<Double> data;
+
+    public Row(List<Double> data) {
+        if (data == null) {
+            throw new IllegalArgumentException("Data cannot be null");
+        }
+        this.data = new ArrayList<>(data);
+    }
 
     public List<Double> getData() {
-        return List.copyOf(data);
+        return Collections.unmodifiableList(data);
     }
 }
